--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31"
         tools:ignore="ExtraText">
+        <activity android:name="com.labprog.siai.RegisterActivity"></activity>
         <activity
             android:name="com.labprog.siai.LoginActivity"
             android:exported="true">
