--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name="com.labprog.siai.MenuActivity"></activity>
         <activity android:name="com.labprog.siai.ArranchamentoActivity"></activity>
         <activity android:name="com.labprog.siai.ExportarActivity"></activity>
+        <activity android:name=".FaltasActivity"></activity>
         <activity
             android:name="com.labprog.siai.LoginActivity"
             android:exported="true">
